crates/codey/src/ui/snapshots/codey__ui__input__tests__snapshot_multiline.snap
---
source: src/ui/input.rs
assertion_line: 1078
expression: rendered
---
┌ test-model ──────────────────────────────── 1k ┐
│First line                                      │
│Second line                                     │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
