crates/codey/src/ui/snapshots/codey__ui__input__tests__snapshot_with_text.snap
---
source: src/ui/input.rs
assertion_line: 1064
expression: rendered
---
┌ test-model ──────────────────────────────── 1k ┐
│Hello, world!                                   │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
